--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,9 +1,7 @@
 .main {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
 }
 
 .description {
