Finish behavior without unit testing

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -94,7 +94,7 @@
 
 .center::before,
 .center::after {
-  content: '';
+  content: "";
   left: 50%;
   position: absolute;
   filter: blur(45px);
@@ -223,4 +223,8 @@
   to {
     transform: rotate(0deg);
   }
+}
+
+.errorText {
+  color: red;
 }
